--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.application.name=Cartunn Backend
 
 # Spring DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/cartunn-backend?useSSL=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/cartunn_backend?useSSL=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=salvadortres1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Spring Data JPA Configuration
@@ -15,3 +15,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=com.thecoders.cartunnbackend.shared.infrastructure.persistence.jpa.strategy.SnakeCasePhysicalNamingStrategy
+# Elements that take their values from maven pom.xml build-related information
+documentation.application.description=@project.description@
+documentation.application.version=@project.version@
+
+# JWT Configuration Properties
+authorization.jwt.secret=WriteHereYourSecretStringFroTokenSigningCredentials
+authorization.jwt.expiration.days=7
