--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.application.name=Cartunn Backend
 
 # Spring DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/cartunn_backend?useSSL=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://junction.proxy.rlwy.net:33311/cartunn_backend?useSSL=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=salvadortres1
+spring.datasource.password=eCSCtiWGZVVEaIfuDRsxbunUXlynTrji
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Spring Data JPA Configuration
