--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
 # Spring Application Name
 spring.application.name=Cartunn Backend
 
+# Server Configuration
+MYSQL_HOST=junction.proxy.rlwy.net
+MYSQL_PORT=33311
+MYSQL_DATABASE=cartunn_backend
+
+#MYSQL_HOST=localhost
+#MYSQL_PORT=3306
+#MYSQL_DATABASE=cartunn_backend
+
+
 # Spring DataSource Configuration
-spring.datasource.url=jdbc:mysql://junction.proxy.rlwy.net:33311/cartunn_backend?useSSL=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
+#spring.datasource.password=root
 spring.datasource.password=eCSCtiWGZVVEaIfuDRsxbunUXlynTrji
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
